--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "npx prisma migrate deploy && node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -34,7 +34,8 @@
     "bcrypt": "^5.1.1",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "prisma": "^6.18.0"  
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.0",
@@ -50,7 +51,6 @@
     "eslint-plugin-prettier": "^5.2.2",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.18.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
