fix: move prisma to dependencies for production migrations

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=production
 PORT=3000
 
 # Database configuration
-DATABASE_URL=postgresql://nestjs:password123@localhost:5432/nestjs_db
+DATABASE_URL=postgresql://postgesql_waev_user:UfSKWCDdhD19W9LCrqecUGUA0nfsOT3A@dpg-d4bnfu8dl3ps73b0tag0-a.frankfurt-postgres.render.com/postgesql_waev
 POSTGRES_USER=nestjs
 POSTGRES_PASSWORD=password123
 POSTGRES_DB=nestjs_db
